--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1022,6 +1022,9 @@
 "No camera available" = "No camera available";
 
 /* No comment provided by engineer. */
+"No categories selected" = "No categories selected";
+
+/* No comment provided by engineer. */
 "No description available" = "No description available";
 
 /* No comment provided by engineer. */
@@ -1158,6 +1161,9 @@
 
 /* No comment provided by engineer. */
 "Please choose another name:" = "Please choose another name:";
+
+/* No comment provided by engineer. */
+"Please choose up to three categories" = "Please choose up to three categories";
 
 /* paint */
 "Please enter a text." = "Please enter a text.";
