CATTY-320 Implement SetPenColorBrick

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1433,6 +1433,9 @@
 "Set description" = "Set description";
 
 /* No comment provided by engineer. */
+"Set pen color to" = "Set pen color to";
+
+/* No comment provided by engineer. */
 "Set pen size to" = "Set pen size to";
 
 /* No comment provided by engineer. */
