CATTY-55 Localized Screenshots for App Store

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1175,6 +1175,9 @@
 "Place at " = "Place at ";
 
 /* No comment provided by engineer. */
+"Play" = "Play";
+
+/* No comment provided by engineer. */
 "Play Phiro music\n" = "Play Phiro music\n";
 
 /* No comment provided by engineer. */
