--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1808,6 +1808,9 @@
 "Welcome!" = "Welcome!";
 
 /* No comment provided by engineer. */
+"When background changes to" = "When background changes to";
+
+/* No comment provided by engineer. */
 "When project started" = "When project started";
 
 /* No comment provided by engineer. */
