CATTY-334 Add ActionSheet action to change project orientation CATTY-334 Add Unit and UI Tests CATTY-334 Update to develop
CATTY-334 Fix Bug with waiting for main queue
CATTY-334 Add methods to project, add unit tests
CATTY-334 Remove no longer needed file
CATTY-334 Remove no longer needed initializer
CATTY-334 Remove no longer needed method, change method
CATTY-334 Change method call and remove no longer needed methods
CATTY-334 Remove to early hide of loading view

--- a/src/Catty/Resources/Localization/de.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/de.lproj/Localizable.strings
@@ -248,6 +248,12 @@
 "Changes saved." = "Änderungen gespeichert!";
 
 /* No comment provided by engineer. */
+"Change to portrait" = "Ändere auf Hochformat";
+
+/* No comment provided by engineer. */
+"Change to landscape" = "Ändere auf Querformat";
+
+/* No comment provided by engineer. */
 "Choose" = "Wähle";
 
 /* No comment provided by engineer. */
