--- a/src/Catty/Resources/Localization/ar.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ar.lproj/Localizable.strings
@@ -149,6 +149,9 @@
 "Backgrounds" = "خلفيات الشاشة";
 
 /* No comment provided by engineer. */
+"becomes true" = "يتحقق الشرط";
+
+/* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Before you can start coding, please read and accept our Privacy Policy to use the app:";
 
 /* paint */
@@ -189,9 +192,6 @@
 
 /* No comment provided by engineer. */
 "By registering you agree to our" = "بالتسجيل، أنت توافق على";
-
-/* No comment provided by engineer. */
-"Camera roll" = "Camera roll";
 
 /* No comment provided by engineer. */
 "Can't restart project!" = "Can't restart project!";
@@ -683,6 +683,9 @@
 "Go back" = "الرجوع للخلف";
 
 /* No comment provided by engineer. */
+"Go to" = "الانتقال إلى";
+
+/* No comment provided by engineer. */
 "Go to front" = "الذهاب إلى الامام";
 
 /* paint */
@@ -1025,6 +1028,9 @@
 "No camera available" = "No camera available";
 
 /* No comment provided by engineer. */
+"No categories selected" = "No categories selected";
+
+/* No comment provided by engineer. */
 "No description available" = "No description available";
 
 /* No comment provided by engineer. */
@@ -1162,6 +1168,9 @@
 /* No comment provided by engineer. */
 "Please choose another name:" = "من فضلك قم باختيار اسم اخر:";
 
+/* No comment provided by engineer. */
+"Please choose up to three categories" = "اختر كحد أقصى ثلاث فئات";
+
 /* paint */
 "Please enter a text." = "Please enter a text.";
 
@@ -1256,6 +1265,9 @@
 "Projects on device" = "البرامج";
 
 /* No comment provided by engineer. */
+"random position" = "موقع عشوائي";
+
+/* No comment provided by engineer. */
 "Rate Us" = "قم بتقييمنا";
 
 /* No comment provided by engineer. */
@@ -1334,7 +1346,7 @@
 "Saturday" = "السبت";
 
 /* paint */
-"Save to cameraRoll" = "Save to cameraRoll";
+"Save to Photos" = "Save to Photos";
 
 /* No comment provided by engineer. */
 "Save to PocketCode" = "حفظ الي بوكت كوود";
@@ -1377,6 +1389,9 @@
 
 /* No comment provided by engineer. */
 "Select brick category" = "Select brick category";
+
+/* No comment provided by engineer. */
+"Select categories" = "Select categories";
 
 /* No comment provided by engineer. */
 "Select logical operator" = "حدد عامل التشغيل المنطقي";
@@ -1425,6 +1440,9 @@
 
 /* No comment provided by engineer. */
 "Set description" = "وصف مجموعة";
+
+/* No comment provided by engineer. */
+"Set pen color to" = "تعيين لون قلم التلوين الى";
 
 /* No comment provided by engineer. */
 "Set pen size to" = "تعيين حجم قلم التلوين بنسبة";
@@ -1649,6 +1667,9 @@
 "Today" = "اليوم";
 
 /* No comment provided by engineer. */
+"touch position" = "قم بلمس الموقع";
+
+/* No comment provided by engineer. */
 "transparency" = "الشفافية";
 
 /* No comment provided by engineer. */
@@ -1788,6 +1809,12 @@
 
 /* No comment provided by engineer. */
 "Welcome!" = "مرحبا!";
+
+/* No comment provided by engineer. */
+"When" = "عندما";
+
+/* No comment provided by engineer. */
+"When background changes to" = "عند تغيير الخلفية إلى";
 
 /* No comment provided by engineer. */
 "When project started" = "When project started";
