--- a/src/Catty/Resources/Localization/bn.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/bn.lproj/Localizable.strings
@@ -149,6 +149,9 @@
 "Backgrounds" = "ব্যাকগ্রাউন্ড";
 
 /* No comment provided by engineer. */
+"becomes true" = "সত্য হয়";
+
+/* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Before you can start coding, please read and accept our Privacy Policy to use the app:";
 
 /* paint */
@@ -189,9 +192,6 @@
 
 /* No comment provided by engineer. */
 "By registering you agree to our" = "নিবন্ধন করে আপনি আমাদের সাথে সম্মত হন";
-
-/* No comment provided by engineer. */
-"Camera roll" = "Camera roll";
 
 /* No comment provided by engineer. */
 "Can't restart project!" = "প্রজেক্ট পুনরায় আরম্ভ করতে পারবেন না!";
@@ -683,6 +683,9 @@
 "Go back" = "ফিরে যান";
 
 /* No comment provided by engineer. */
+"Go to" = "যান";
+
+/* No comment provided by engineer. */
 "Go to front" = "সামনে যান";
 
 /* paint */
@@ -1025,6 +1028,9 @@
 "No camera available" = "No camera available";
 
 /* No comment provided by engineer. */
+"No categories selected" = "No categories selected";
+
+/* No comment provided by engineer. */
 "No description available" = "No description available";
 
 /* No comment provided by engineer. */
@@ -1162,6 +1168,9 @@
 /* No comment provided by engineer. */
 "Please choose another name:" = "অন্য নাম নির্বাচন করুন।";
 
+/* No comment provided by engineer. */
+"Please choose up to three categories" = "তিনটি বিভাগ পর্যন্ত নির্বাচন করুন";
+
 /* paint */
 "Please enter a text." = "Please enter a text.";
 
@@ -1256,6 +1265,9 @@
 "Projects on device" = "ডিভাইসে প্রজেক্টগুলি";
 
 /* No comment provided by engineer. */
+"random position" = "এলোমেলো অবস্থান";
+
+/* No comment provided by engineer. */
 "Rate Us" = "আমাদের মতামত দিন";
 
 /* No comment provided by engineer. */
@@ -1334,7 +1346,7 @@
 "Saturday" = "শনিবার";
 
 /* paint */
-"Save to cameraRoll" = "Save to cameraRoll";
+"Save to Photos" = "Save to Photos";
 
 /* No comment provided by engineer. */
 "Save to PocketCode" = "পকেট কোড সংরক্ষণ করুন";
@@ -1377,6 +1389,9 @@
 
 /* No comment provided by engineer. */
 "Select brick category" = "Select brick category";
+
+/* No comment provided by engineer. */
+"Select categories" = "Select categories";
 
 /* No comment provided by engineer. */
 "Select logical operator" = "লজিকাল অপারেটর নির্বাচন করুন";
@@ -1425,6 +1440,9 @@
 
 /* No comment provided by engineer. */
 "Set description" = "বর্ণনা করুন";
+
+/* No comment provided by engineer. */
+"Set pen color to" = "এতে কলমের রঙ সেট করুন";
 
 /* No comment provided by engineer. */
 "Set pen size to" = "কলমের আকার সেট করুন";
@@ -1649,6 +1667,9 @@
 "Today" = "আজ";
 
 /* No comment provided by engineer. */
+"touch position" = "স্পর্শ অবস্থান";
+
+/* No comment provided by engineer. */
 "transparency" = "স্বচ্ছতা";
 
 /* No comment provided by engineer. */
@@ -1788,6 +1809,12 @@
 
 /* No comment provided by engineer. */
 "Welcome!" = "স্বাগতম";
+
+/* No comment provided by engineer. */
+"When" = "কখন";
+
+/* No comment provided by engineer. */
+"When background changes to" = "যখন ব্যাকগ্রাউন্ডে পরিবর্তন হয়";
 
 /* No comment provided by engineer. */
 "When project started" = "যখন প্রজেক্ট শুরু";
