--- a/src/Catty/Resources/Localization/bs.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/bs.lproj/Localizable.strings
@@ -149,6 +149,9 @@
 "Backgrounds" = "Pozadine";
 
 /* No comment provided by engineer. */
+"becomes true" = "postaje tačno";
+
+/* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Before you can start coding, please read and accept our Privacy Policy to use the app:";
 
 /* paint */
@@ -189,9 +192,6 @@
 
 /* No comment provided by engineer. */
 "By registering you agree to our" = "Registracijom se slažeš sa našim";
-
-/* No comment provided by engineer. */
-"Camera roll" = "Camera roll";
 
 /* No comment provided by engineer. */
 "Can't restart project!" = "Projekat nije moguće ponovo pokrenuti!";
@@ -683,6 +683,9 @@
 "Go back" = "Idi nazad";
 
 /* No comment provided by engineer. */
+"Go to" = "Idite na";
+
+/* No comment provided by engineer. */
 "Go to front" = "Idi naprijed";
 
 /* paint */
@@ -1025,6 +1028,9 @@
 "No camera available" = "No camera available";
 
 /* No comment provided by engineer. */
+"No categories selected" = "No categories selected";
+
+/* No comment provided by engineer. */
 "No description available" = "No description available";
 
 /* No comment provided by engineer. */
@@ -1162,6 +1168,9 @@
 /* No comment provided by engineer. */
 "Please choose another name:" = "Molimo Vas da odaberete drugi naziv:";
 
+/* No comment provided by engineer. */
+"Please choose up to three categories" = "Molimo izaberite do tri kategorije";
+
 /* paint */
 "Please enter a text." = "Please enter a text.";
 
@@ -1256,6 +1265,9 @@
 "Projects on device" = "Programi";
 
 /* No comment provided by engineer. */
+"random position" = "slučajna pozicija";
+
+/* No comment provided by engineer. */
 "Rate Us" = "Rate Us";
 
 /* No comment provided by engineer. */
@@ -1334,7 +1346,7 @@
 "Saturday" = "Subota";
 
 /* paint */
-"Save to cameraRoll" = "Save to cameraRoll";
+"Save to Photos" = "Save to Photos";
 
 /* No comment provided by engineer. */
 "Save to PocketCode" = "Sačuvajte u PocketCode";
@@ -1377,6 +1389,9 @@
 
 /* No comment provided by engineer. */
 "Select brick category" = "Select brick category";
+
+/* No comment provided by engineer. */
+"Select categories" = "Select categories";
 
 /* No comment provided by engineer. */
 "Select logical operator" = "Izaberite logički operator";
@@ -1425,6 +1440,9 @@
 
 /* No comment provided by engineer. */
 "Set description" = "Postavi opis";
+
+/* No comment provided by engineer. */
+"Set pen color to" = "Postavite boju olovke na";
 
 /* No comment provided by engineer. */
 "Set pen size to" = "Postavite veličinu olovke na";
@@ -1649,6 +1667,9 @@
 "Today" = "Danas";
 
 /* No comment provided by engineer. */
+"touch position" = "dodirnite poziciju";
+
+/* No comment provided by engineer. */
 "transparency" = "transparentnost";
 
 /* No comment provided by engineer. */
@@ -1788,6 +1809,12 @@
 
 /* No comment provided by engineer. */
 "Welcome!" = "Dobro došli!";
+
+/* No comment provided by engineer. */
+"When" = "Kada";
+
+/* No comment provided by engineer. */
+"When background changes to" = "Kada se pozadina promijeni na";
 
 /* No comment provided by engineer. */
 "When project started" = "When project started";
