--- a/src/Catty/Resources/Localization/cs.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/cs.lproj/Localizable.strings
@@ -149,6 +149,9 @@
 "Backgrounds" = "Pozadí";
 
 /* No comment provided by engineer. */
+"becomes true" = "bude platit";
+
+/* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Before you can start coding, please read and accept our Privacy Policy to use the app:";
 
 /* paint */
@@ -189,9 +192,6 @@
 
 /* No comment provided by engineer. */
 "By registering you agree to our" = "Registrací souhlasíte s našimi";
-
-/* No comment provided by engineer. */
-"Camera roll" = "Camera roll";
 
 /* No comment provided by engineer. */
 "Can't restart project!" = "Can't restart project!";
@@ -683,6 +683,9 @@
 "Go back" = "Zpět";
 
 /* No comment provided by engineer. */
+"Go to" = "Přejít na";
+
+/* No comment provided by engineer. */
 "Go to front" = "Přejít do popředí";
 
 /* paint */
@@ -1025,6 +1028,9 @@
 "No camera available" = "No camera available";
 
 /* No comment provided by engineer. */
+"No categories selected" = "No categories selected";
+
+/* No comment provided by engineer. */
 "No description available" = "No description available";
 
 /* No comment provided by engineer. */
@@ -1162,6 +1168,9 @@
 /* No comment provided by engineer. */
 "Please choose another name:" = "Please choose another name:";
 
+/* No comment provided by engineer. */
+"Please choose up to three categories" = "Vyber prosím až tři kategorie";
+
 /* paint */
 "Please enter a text." = "Please enter a text.";
 
@@ -1256,6 +1265,9 @@
 "Projects on device" = "Programy";
 
 /* No comment provided by engineer. */
+"random position" = "Náhodná pozice";
+
+/* No comment provided by engineer. */
 "Rate Us" = "Ohodnoťte nás";
 
 /* No comment provided by engineer. */
@@ -1334,7 +1346,7 @@
 "Saturday" = "Sobota";
 
 /* paint */
-"Save to cameraRoll" = "Save to cameraRoll";
+"Save to Photos" = "Save to Photos";
 
 /* No comment provided by engineer. */
 "Save to PocketCode" = "Uložit do PocketCode";
@@ -1377,6 +1389,9 @@
 
 /* No comment provided by engineer. */
 "Select brick category" = "Select brick category";
+
+/* No comment provided by engineer. */
+"Select categories" = "Select categories";
 
 /* No comment provided by engineer. */
 "Select logical operator" = "Vyberte logický operátor";
@@ -1425,6 +1440,9 @@
 
 /* No comment provided by engineer. */
 "Set description" = "Nastavit popis";
+
+/* No comment provided by engineer. */
+"Set pen color to" = "Nastavit barvu pera na";
 
 /* No comment provided by engineer. */
 "Set pen size to" = "Nastavit velikost pera na";
@@ -1649,6 +1667,9 @@
 "Today" = "Dnes";
 
 /* No comment provided by engineer. */
+"touch position" = "Pozice dotyku";
+
+/* No comment provided by engineer. */
 "transparency" = "Průhlednost";
 
 /* No comment provided by engineer. */
@@ -1788,6 +1809,12 @@
 
 /* No comment provided by engineer. */
 "Welcome!" = "Vítej!";
+
+/* No comment provided by engineer. */
+"When" = "Když";
+
+/* No comment provided by engineer. */
+"When background changes to" = "Když se pozadí změní na";
 
 /* No comment provided by engineer. */
 "When project started" = "When project started";
