--- a/src/Catty/Resources/Localization/es.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/es.lproj/Localizable.strings
@@ -149,6 +149,9 @@
 "Backgrounds" = "Fondos";
 
 /* No comment provided by engineer. */
+"becomes true" = "se convierte en verdadero";
+
+/* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Before you can start coding, please read and accept our Privacy Policy to use the app:";
 
 /* paint */
@@ -189,9 +192,6 @@
 
 /* No comment provided by engineer. */
 "By registering you agree to our" = "Al registrarse, usted acepta nuestra";
-
-/* No comment provided by engineer. */
-"Camera roll" = "Camera roll";
 
 /* No comment provided by engineer. */
 "Can't restart project!" = "¡No se puede reiniciar el proyecto!";
@@ -683,6 +683,9 @@
 "Go back" = "Retroceder";
 
 /* No comment provided by engineer. */
+"Go to" = "Ir";
+
+/* No comment provided by engineer. */
 "Go to front" = "Ir al frente";
 
 /* paint */
@@ -1025,6 +1028,9 @@
 "No camera available" = "No camera available";
 
 /* No comment provided by engineer. */
+"No categories selected" = "No categorías seleccionadas";
+
+/* No comment provided by engineer. */
 "No description available" = "No description available";
 
 /* No comment provided by engineer. */
@@ -1162,6 +1168,9 @@
 /* No comment provided by engineer. */
 "Please choose another name:" = "Please choose another name:";
 
+/* No comment provided by engineer. */
+"Please choose up to three categories" = "Por favor, elija hasta tres categorías";
+
 /* paint */
 "Please enter a text." = "Please enter a text.";
 
@@ -1256,6 +1265,9 @@
 "Projects on device" = "Proyectos";
 
 /* No comment provided by engineer. */
+"random position" = "posición aleatoria";
+
+/* No comment provided by engineer. */
 "Rate Us" = "Calificanos";
 
 /* No comment provided by engineer. */
@@ -1334,7 +1346,7 @@
 "Saturday" = "Sábado";
 
 /* paint */
-"Save to cameraRoll" = "Save to cameraRoll";
+"Save to Photos" = "Guardar a Fotos";
 
 /* No comment provided by engineer. */
 "Save to PocketCode" = "Guardar en PocketCode";
@@ -1377,6 +1389,9 @@
 
 /* No comment provided by engineer. */
 "Select brick category" = "Select brick category";
+
+/* No comment provided by engineer. */
+"Select categories" = "Select categories";
 
 /* No comment provided by engineer. */
 "Select logical operator" = "Seleccione operador lógico";
@@ -1425,6 +1440,9 @@
 
 /* No comment provided by engineer. */
 "Set description" = "Descripción del set";
+
+/* No comment provided by engineer. */
+"Set pen color to" = "Establecer color del trazo";
 
 /* No comment provided by engineer. */
 "Set pen size to" = "Establecer tamaño del trazo";
@@ -1649,6 +1667,9 @@
 "Today" = "Hoy";
 
 /* No comment provided by engineer. */
+"touch position" = "posición táctil";
+
+/* No comment provided by engineer. */
 "transparency" = "transparencia";
 
 /* No comment provided by engineer. */
@@ -1788,6 +1809,12 @@
 
 /* No comment provided by engineer. */
 "Welcome!" = "¡Bienvenido!";
+
+/* No comment provided by engineer. */
+"When" = "Cuando";
+
+/* No comment provided by engineer. */
+"When background changes to" = "Cuando el fondo cambia a";
 
 /* No comment provided by engineer. */
 "When project started" = "Cuando el proyecto comience";
