--- a/src/Catty/Resources/Localization/it.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/it.lproj/Localizable.strings
@@ -149,6 +149,9 @@
 "Backgrounds" = "Sfondi";
 
 /* No comment provided by engineer. */
+"becomes true" = "diventa vero";
+
+/* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Before you can start coding, please read and accept our Privacy Policy to use the app:";
 
 /* paint */
@@ -189,9 +192,6 @@
 
 /* No comment provided by engineer. */
 "By registering you agree to our" = "Registrandoti, accetti i nostri";
-
-/* No comment provided by engineer. */
-"Camera roll" = "Rullino fotografico";
 
 /* No comment provided by engineer. */
 "Can't restart project!" = "Impossibile riavviare il progetto!";
@@ -431,7 +431,7 @@
 "direction" = "direzione";
 
 /* No comment provided by engineer. */
-"Disable brick" = "Disable brick";
+"Disable brick" = "Disabilita mattoncino";
 
 /* No comment provided by engineer. */
 "Disable condition" = "Disable condition";
@@ -530,7 +530,7 @@
 "Empty input!" = "Input vuoto!";
 
 /* No comment provided by engineer. */
-"Enable brick" = "Enable brick";
+"Enable brick" = "Abilita mattoncino";
 
 /* No comment provided by engineer. */
 "Enable condition" = "Enable condition";
@@ -681,6 +681,9 @@
 
 /* No comment provided by engineer. */
 "Go back" = "Indietro";
+
+/* No comment provided by engineer. */
+"Go to" = "Vai a";
 
 /* No comment provided by engineer. */
 "Go to front" = "Sposta avanti";
@@ -1025,6 +1028,9 @@
 "No camera available" = "No camera available";
 
 /* No comment provided by engineer. */
+"No categories selected" = "No categories selected";
+
+/* No comment provided by engineer. */
 "No description available" = "No description available";
 
 /* No comment provided by engineer. */
@@ -1162,6 +1168,9 @@
 /* No comment provided by engineer. */
 "Please choose another name:" = "Scegli un altro nome:";
 
+/* No comment provided by engineer. */
+"Please choose up to three categories" = "Scegli fino a tre categorie";
+
 /* paint */
 "Please enter a text." = "Please enter a text.";
 
@@ -1256,6 +1265,9 @@
 "Projects on device" = "Programmi";
 
 /* No comment provided by engineer. */
+"random position" = "Posizione casuale";
+
+/* No comment provided by engineer. */
 "Rate Us" = "Votaci";
 
 /* No comment provided by engineer. */
@@ -1334,7 +1346,7 @@
 "Saturday" = "Sabato";
 
 /* paint */
-"Save to cameraRoll" = "Save to cameraRoll";
+"Save to Photos" = "Save to Photos";
 
 /* No comment provided by engineer. */
 "Save to PocketCode" = "Salva in PocketCode";
@@ -1377,6 +1389,9 @@
 
 /* No comment provided by engineer. */
 "Select brick category" = "Select brick category";
+
+/* No comment provided by engineer. */
+"Select categories" = "Select categories";
 
 /* No comment provided by engineer. */
 "Select logical operator" = "Selezionare l'operatore logico";
@@ -1425,6 +1440,9 @@
 
 /* No comment provided by engineer. */
 "Set description" = "Imposta descrizione";
+
+/* No comment provided by engineer. */
+"Set pen color to" = "Imposta il colore della penna a";
 
 /* No comment provided by engineer. */
 "Set pen size to" = "Imposta dimensione della penna a";
@@ -1649,6 +1667,9 @@
 "Today" = "Oggi";
 
 /* No comment provided by engineer. */
+"touch position" = "Posizione del tocco";
+
+/* No comment provided by engineer. */
 "transparency" = "trasparenza";
 
 /* No comment provided by engineer. */
@@ -1788,6 +1809,12 @@
 
 /* No comment provided by engineer. */
 "Welcome!" = "Benvenuto!";
+
+/* No comment provided by engineer. */
+"When" = "Quando";
+
+/* No comment provided by engineer. */
+"When background changes to" = "Quando lo sfondo impostato a";
 
 /* No comment provided by engineer. */
 "When project started" = "Quando il progetto è iniziato";
