--- a/src/Catty/Resources/Localization/pt-BR.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/pt-BR.lproj/Localizable.strings
@@ -56,10 +56,10 @@
 "All known Bluetooth devices successfully removed" = "Todos os dispositivos Bluetooth conhecidos foram removidos com sucesso";
 
 /* No comment provided by engineer. */
-"Allow the app to control Arduino boards" = "Allow the app to control Arduino boards";
+"Allow the app to control Arduino boards" = "Permitir que o aplicativo controle as placas da Arduino";
 
 /* No comment provided by engineer. */
-"Allow the app to send crash reports automatically" = "Allow the app to send crash reports automatically";
+"Allow the app to send crash reports automatically" = "Permitir que o aplicativo envie relatórios de falha automaticamente";
 
 /* paint */
 "Alpha" = "Alfa";
@@ -104,7 +104,7 @@
 "arduino digital" = "arduino digital";
 
 /* No comment provided by engineer. */
-"Arduino extension" = "Arduino extension";
+"Arduino extension" = "Extensão Arduino";
 
 /* No comment provided by engineer. */
 "at " = "em ";
@@ -149,6 +149,9 @@
 "Backgrounds" = "Pano de fundo";
 
 /* No comment provided by engineer. */
+"becomes true" = "becomes true";
+
+/* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Before you can start coding, please read and accept our Privacy Policy to use the app:";
 
 /* paint */
@@ -189,9 +192,6 @@
 
 /* No comment provided by engineer. */
 "By registering you agree to our" = "Ao registrar-se, você concorda com nossos";
-
-/* No comment provided by engineer. */
-"Camera roll" = "Camera roll";
 
 /* No comment provided by engineer. */
 "Can't restart project!" = "Não é possível reiniciar o projeto!";
@@ -683,6 +683,9 @@
 "Go back" = "Retornar";
 
 /* No comment provided by engineer. */
+"Go to" = "Go to";
+
+/* No comment provided by engineer. */
 "Go to front" = "Ir para a frente";
 
 /* paint */
@@ -704,7 +707,7 @@
 "Hide" = "Esconder";
 
 /* No comment provided by engineer. */
-"Hide details" = "Hide details";
+"Hide details" = "Ocultar detalhes";
 
 /* No comment provided by engineer. */
 "Hide variable" = "Esconder variável";
@@ -1025,6 +1028,9 @@
 "No camera available" = "No camera available";
 
 /* No comment provided by engineer. */
+"No categories selected" = "No categories selected";
+
+/* No comment provided by engineer. */
 "No description available" = "No description available";
 
 /* No comment provided by engineer. */
@@ -1162,6 +1168,9 @@
 /* No comment provided by engineer. */
 "Please choose another name:" = "Please choose another name:";
 
+/* No comment provided by engineer. */
+"Please choose up to three categories" = "Please choose up to three categories";
+
 /* paint */
 "Please enter a text." = "Please enter a text.";
 
@@ -1256,6 +1265,9 @@
 "Projects on device" = "Programas";
 
 /* No comment provided by engineer. */
+"random position" = "random position";
+
+/* No comment provided by engineer. */
 "Rate Us" = "Avalie-nos";
 
 /* No comment provided by engineer. */
@@ -1334,7 +1346,7 @@
 "Saturday" = "Sábado";
 
 /* paint */
-"Save to cameraRoll" = "Save to cameraRoll";
+"Save to Photos" = "Save to Photos";
 
 /* No comment provided by engineer. */
 "Save to PocketCode" = "Salvar em PocketCode";
@@ -1379,6 +1391,9 @@
 "Select brick category" = "Select brick category";
 
 /* No comment provided by engineer. */
+"Select categories" = "Select categories";
+
+/* No comment provided by engineer. */
 "Select logical operator" = "Selecione o operador lógico";
 
 /* No comment provided by engineer. */
@@ -1391,7 +1406,7 @@
 "Select Phiro" = "Seleccionar o Phiro";
 
 /* No comment provided by engineer. */
-"Sending anonymous crash reports" = "Sending anonymous crash reports";
+"Sending anonymous crash reports" = "Enviando relatórios anônimos de erros";
 
 /* No comment provided by engineer. */
 "Sensors" = "Sensores";
@@ -1427,6 +1442,9 @@
 "Set description" = "Definir descrição";
 
 /* No comment provided by engineer. */
+"Set pen color to" = "Set pen color to";
+
+/* No comment provided by engineer. */
 "Set pen size to" = "Set pen size to";
 
 /* No comment provided by engineer. */
@@ -1457,7 +1475,7 @@
 "Show" = "Mostrar";
 
 /* No comment provided by engineer. */
-"Show details" = "Show details";
+"Show details" = "Mostrar detalhes";
 
 /* No comment provided by engineer. */
 "Show variable" = "Mostrar variável";
@@ -1649,6 +1667,9 @@
 "Today" = "Hoje";
 
 /* No comment provided by engineer. */
+"touch position" = "touch position";
+
+/* No comment provided by engineer. */
 "transparency" = "transparência";
 
 /* No comment provided by engineer. */
@@ -1788,6 +1809,12 @@
 
 /* No comment provided by engineer. */
 "Welcome!" = "Welcome!";
+
+/* No comment provided by engineer. */
+"When" = "When";
+
+/* No comment provided by engineer. */
+"When background changes to" = "When background changes to";
 
 /* No comment provided by engineer. */
 "When project started" = "When project started";
