--- a/src/Catty/Resources/Localization/sr-CS.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/sr-CS.lproj/Localizable.strings
@@ -149,6 +149,9 @@
 "Backgrounds" = "Pozadine";
 
 /* No comment provided by engineer. */
+"becomes true" = "postane tačno";
+
+/* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Pre nego što počnete sa programiranjem, pročitajte i prihvatite našu Politiku privatnosti da biste koristili aplikaciju:";
 
 /* paint */
@@ -189,9 +192,6 @@
 
 /* No comment provided by engineer. */
 "By registering you agree to our" = "Registracijom pristajete na naše";
-
-/* No comment provided by engineer. */
-"Camera roll" = "Fotografije";
 
 /* No comment provided by engineer. */
 "Can't restart project!" = "Projekt se ne može ponovo pokrenuti!";
@@ -683,6 +683,9 @@
 "Go back" = "Nazad";
 
 /* No comment provided by engineer. */
+"Go to" = "Idi do";
+
+/* No comment provided by engineer. */
 "Go to front" = "Idi napred";
 
 /* paint */
@@ -1025,6 +1028,9 @@
 "No camera available" = "Nema dostupne kamere";
 
 /* No comment provided by engineer. */
+"No categories selected" = "No categories selected";
+
+/* No comment provided by engineer. */
 "No description available" = "Opis nije dostupan";
 
 /* No comment provided by engineer. */
@@ -1162,6 +1168,9 @@
 /* No comment provided by engineer. */
 "Please choose another name:" = "Molimo Vas unesite drugo ime:";
 
+/* No comment provided by engineer. */
+"Please choose up to three categories" = "Izaberite do tri kategorije";
+
 /* paint */
 "Please enter a text." = "Molimo unesite tekst.";
 
@@ -1256,6 +1265,9 @@
 "Projects on device" = "Programi";
 
 /* No comment provided by engineer. */
+"random position" = "nasumična pozicija";
+
+/* No comment provided by engineer. */
 "Rate Us" = "Ocenite nas";
 
 /* No comment provided by engineer. */
@@ -1334,7 +1346,7 @@
 "Saturday" = "Subota";
 
 /* paint */
-"Save to cameraRoll" = "Sačuvaj u galeriju";
+"Save to Photos" = "Save to Photos";
 
 /* No comment provided by engineer. */
 "Save to PocketCode" = "Spremi u PocketCode";
@@ -1377,6 +1389,9 @@
 
 /* No comment provided by engineer. */
 "Select brick category" = "Izaberite kategoriju kocke";
+
+/* No comment provided by engineer. */
+"Select categories" = "Select categories";
 
 /* No comment provided by engineer. */
 "Select logical operator" = "Izaberite logički operator";
@@ -1425,6 +1440,9 @@
 
 /* No comment provided by engineer. */
 "Set description" = "Postavi opis";
+
+/* No comment provided by engineer. */
+"Set pen color to" = "Podesi boju olovke na";
 
 /* No comment provided by engineer. */
 "Set pen size to" = "Podesi veličinu olovke na";
@@ -1649,6 +1667,9 @@
 "Today" = "Danas";
 
 /* No comment provided by engineer. */
+"touch position" = "pozicija dodira";
+
+/* No comment provided by engineer. */
 "transparency" = "transparentnost";
 
 /* No comment provided by engineer. */
@@ -1788,6 +1809,12 @@
 
 /* No comment provided by engineer. */
 "Welcome!" = "Dobrodošli!";
+
+/* No comment provided by engineer. */
+"When" = "Kada";
+
+/* No comment provided by engineer. */
+"When background changes to" = "Kada se pozadina promeni u";
 
 /* No comment provided by engineer. */
 "When project started" = "Kad je projekat pokrenut";
