--- a/src/Catty/Resources/Localization/th.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/th.lproj/Localizable.strings
@@ -149,6 +149,9 @@
 "Backgrounds" = "พื้นหลัง";
 
 /* No comment provided by engineer. */
+"becomes true" = "กลายเป็นจริง";
+
+/* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "ก่อนที่คุณจะเริ่มการเข้ารหัสโปรดอ่านและยอมรับนโยบายความเป็นส่วนตัวของเราเพื่อใช้แอพ:";
 
 /* paint */
@@ -189,9 +192,6 @@
 
 /* No comment provided by engineer. */
 "By registering you agree to our" = "โดยการลงทะเบียน คุณยอมรับ";
-
-/* No comment provided by engineer. */
-"Camera roll" = "ที่เก็บภาพ";
 
 /* No comment provided by engineer. */
 "Can't restart project!" = "Can't restart project!";
@@ -254,7 +254,7 @@
 "Choose image" = "เลือกภาพ";
 
 /* No comment provided by engineer. */
-"Clear" = "Clear";
+"Clear" = "ลบ";
 
 /* No comment provided by engineer. */
 "Clear graphic effects" = "ล้างลักษณะพิเศษ";
@@ -431,7 +431,7 @@
 "direction" = "ทิศทาง";
 
 /* No comment provided by engineer. */
-"Disable brick" = "Disable brick";
+"Disable brick" = "ปิดการใช้งาน คำสั่ง";
 
 /* No comment provided by engineer. */
 "Disable condition" = "Disable condition";
@@ -530,7 +530,7 @@
 "Empty input!" = "Empty input!";
 
 /* No comment provided by engineer. */
-"Enable brick" = "Enable brick";
+"Enable brick" = "เปิดใช้งาน คำสั้ง";
 
 /* No comment provided by engineer. */
 "Enable condition" = "Enable condition";
@@ -683,6 +683,9 @@
 "Go back" = "ย้อนกลับ";
 
 /* No comment provided by engineer. */
+"Go to" = "ไปยัง";
+
+/* No comment provided by engineer. */
 "Go to front" = "ย้ายขึ้นข้างบน";
 
 /* paint */
@@ -764,7 +767,7 @@
 "iOS." = "iOS.";
 
 /* No comment provided by engineer. */
-"is true" = "is true";
+"is true" = "เป็นความจริง";
 
 /* No comment provided by engineer. */
 "is true then" = "เป็นจริงแล้ว";
@@ -1025,6 +1028,9 @@
 "No camera available" = "ไม่มีกล้อง";
 
 /* No comment provided by engineer. */
+"No categories selected" = "ไม่มีหมวดหมู่ใดที่ถูกเลือก";
+
+/* No comment provided by engineer. */
 "No description available" = "ไม่มีคำอธิบาย";
 
 /* No comment provided by engineer. */
@@ -1088,13 +1094,13 @@
 "October" = "ตุลาคม";
 
 /* No comment provided by engineer. */
-"off" = "off";
+"off" = "ปิด";
 
 /* No comment provided by engineer. */
 "OK" = "ตกลง";
 
 /* No comment provided by engineer. */
-"on" = "on";
+"on" = "เปิด";
 
 /* No comment provided by engineer. */
 "only 15 characters allowed" = "อนุญาตให้ใช้เพียง 15 อักขระ";
@@ -1161,6 +1167,9 @@
 
 /* No comment provided by engineer. */
 "Please choose another name:" = "Please choose another name:";
+
+/* No comment provided by engineer. */
+"Please choose up to three categories" = "โปรดเลือกได้สูงสุดสามหมวด";
 
 /* paint */
 "Please enter a text." = "กรุณากรอกข้อความ";
@@ -1256,6 +1265,9 @@
 "Projects on device" = "โครงการบนอุปกรณ์​";
 
 /* No comment provided by engineer. */
+"random position" = "ตำแหน่งสุ่ม";
+
+/* No comment provided by engineer. */
 "Rate Us" = "ให้คะแนนเรา";
 
 /* No comment provided by engineer. */
@@ -1334,7 +1346,7 @@
 "Saturday" = "วันเสาร์";
 
 /* paint */
-"Save to cameraRoll" = "บันทึกไปยังที่เก็บรูปภาพ";
+"Save to Photos" = "บันทึกลงใน Photos";
 
 /* No comment provided by engineer. */
 "Save to PocketCode" = "บันทึกไปยังแฟ้ม PocketCode";
@@ -1377,6 +1389,9 @@
 
 /* No comment provided by engineer. */
 "Select brick category" = "เลือกหมวดหมู่คำสั่ง";
+
+/* No comment provided by engineer. */
+"Select categories" = "Select categories";
 
 /* No comment provided by engineer. */
 "Select logical operator" = "เลือกตัวดำเนินตรรกะ";
@@ -1425,6 +1440,9 @@
 
 /* No comment provided by engineer. */
 "Set description" = "กำหนดคำอธิบาย";
+
+/* No comment provided by engineer. */
+"Set pen color to" = "ตั้งค่าสีปากกาเป็น";
 
 /* No comment provided by engineer. */
 "Set pen size to" = "ตั้งค่าขนาดปากกาเป็น";
@@ -1649,6 +1667,9 @@
 "Today" = "วันนี้";
 
 /* No comment provided by engineer. */
+"touch position" = "ตำแหน่งสัมผัส";
+
+/* No comment provided by engineer. */
 "transparency" = "ความโปร่งใส";
 
 /* No comment provided by engineer. */
@@ -1664,7 +1685,7 @@
 "Turn camera" = "Turn camera";
 
 /* No comment provided by engineer. */
-"Turn flashlight" = "Turn flashlight";
+"Turn flashlight" = "เปิดไฟฉาย";
 
 /* No comment provided by engineer. */
 "Turn left" = "เลี้ยวซ้าย";
@@ -1775,7 +1796,7 @@
 "Wait" = "รอ";
 
 /* No comment provided by engineer. */
-"Wait until" = "Wait until";
+"Wait until" = "รอจนกว่า";
 
 /* No comment provided by engineer. */
 "We" = "เรา";
@@ -1788,6 +1809,12 @@
 
 /* No comment provided by engineer. */
 "Welcome!" = "ยินดีต้อนรับ!";
+
+/* No comment provided by engineer. */
+"When" = "เมื่อ";
+
+/* No comment provided by engineer. */
+"When background changes to" = "When background changes to";
 
 /* No comment provided by engineer. */
 "When project started" = "When project started";
