--- a/src/Catty/Resources/Localization/ur.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ur.lproj/Localizable.strings
@@ -149,6 +149,9 @@
 "Backgrounds" = "پس منظر";
 
 /* No comment provided by engineer. */
+"becomes true" = "سچ ہو جاتا ہے";
+
+/* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Before you can start coding, please read and accept our Privacy Policy to use the app:";
 
 /* paint */
@@ -189,9 +192,6 @@
 
 /* No comment provided by engineer. */
 "By registering you agree to our" = "رجسٹر ہوتے ہوئے آپ متفق ہیں ہمارے";
-
-/* No comment provided by engineer. */
-"Camera roll" = "Camera roll";
 
 /* No comment provided by engineer. */
 "Can't restart project!" = "پروگرام پھر شروع نہیں کر سکتے!";
@@ -683,6 +683,9 @@
 "Go back" = "واپس جائیں";
 
 /* No comment provided by engineer. */
+"Go to" = "کے پاس جاؤ";
+
+/* No comment provided by engineer. */
 "Go to front" = "سامنے جاؤ";
 
 /* paint */
@@ -1025,6 +1028,9 @@
 "No camera available" = "No camera available";
 
 /* No comment provided by engineer. */
+"No categories selected" = "No categories selected";
+
+/* No comment provided by engineer. */
 "No description available" = "No description available";
 
 /* No comment provided by engineer. */
@@ -1162,6 +1168,9 @@
 /* No comment provided by engineer. */
 "Please choose another name:" = "برائے مہربانی کوئی دوسری فائل منتخب کریں";
 
+/* No comment provided by engineer. */
+"Please choose up to three categories" = "تین زمرے کا انتخاب کریں";
+
 /* paint */
 "Please enter a text." = "Please enter a text.";
 
@@ -1256,6 +1265,9 @@
 "Projects on device" = "پروگرامات";
 
 /* No comment provided by engineer. */
+"random position" = "بے ترتیب پوزیشن";
+
+/* No comment provided by engineer. */
 "Rate Us" = "ہمیں اعزاز دیں!";
 
 /* No comment provided by engineer. */
@@ -1334,7 +1346,7 @@
 "Saturday" = "ہفتہ";
 
 /* paint */
-"Save to cameraRoll" = "Save to cameraRoll";
+"Save to Photos" = "Save to Photos";
 
 /* No comment provided by engineer. */
 "Save to PocketCode" = "پاکٹ کوڈ میں محفوظ کریں";
@@ -1377,6 +1389,9 @@
 
 /* No comment provided by engineer. */
 "Select brick category" = "Select brick category";
+
+/* No comment provided by engineer. */
+"Select categories" = "Select categories";
 
 /* No comment provided by engineer. */
 "Select logical operator" = "منطقی آپریٹر منتخب کریں";
@@ -1425,6 +1440,9 @@
 
 /* No comment provided by engineer. */
 "Set description" = "تفصیل مقرر کریں";
+
+/* No comment provided by engineer. */
+"Set pen color to" = "قلم کا رنگ مقرر کریں";
 
 /* No comment provided by engineer. */
 "Set pen size to" = "قلم کا سائز مقرر کریں";
@@ -1649,6 +1667,9 @@
 "Today" = "آج";
 
 /* No comment provided by engineer. */
+"touch position" = "ٹچ پوزیشن";
+
+/* No comment provided by engineer. */
 "transparency" = "شفافیت";
 
 /* No comment provided by engineer. */
@@ -1788,6 +1809,12 @@
 
 /* No comment provided by engineer. */
 "Welcome!" = "خوش آمدید";
+
+/* No comment provided by engineer. */
+"When" = "جب";
+
+/* No comment provided by engineer. */
+"When background changes to" = "جب پس منظر کو تبدیل کرتا ہے";
 
 /* No comment provided by engineer. */
 "When project started" = "جب منصوبے شروع ہوگئے";
