CATTY-19: Create Brick "set rotation style"
CATTY-19: Parser for Brick


Catty-19: Instructions is working. Problems with rotation


CATTY-19: Problems with instr.


Catty-19: I think i found my fail


CATTY-19: Don't Rotate working


CATTY-19: Problems with degree/radians when bouncing


CATTY-19: let to var


Catty-19: Don't Rotate and AllAround is working without fails


Catty-19: Left-Right is working now


CATTY-19: Finish


CATTY-19: Last changes


CATTY-19: First changes of review


CATTY-19: Forgot to change the tests


CATTY-19: Change INT to ENUM


CATTY-19: Enum Test


CATTY-19: Enum Test Update


Catty: -19: Change name of value


CATTY-19: Integration Test fix


CATTY-19: Rename Test


CATTY-19: Add new Tests


CATTY-19: Rename rotationMode to RotationStyle


CATTY-19: Move to folder


CATTY-19: Move to folder


CATTY-19: Add test for isFlipped!


CATTY-19: Func to Rotate in RotationSensor now


CATTY-19: File in correct Folder now


CATTY-19: Swiftlint error


CATTY-19: Add Test for RotationSensor


CAATTY-19: Modify RotationSensorTest


CATTY-19: Modify RotationSensorTest again


CATTY-19: Modify some Tests


CATTY-19: Wrong value checked


CATTY-19: Add a test for this bug

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -50,6 +50,9 @@
 "Agree" = "Agree";
 
 /* No comment provided by engineer. */
+"all around" = "all around";
+
+/* No comment provided by engineer. */
 "All Bluetooth devices successfully disconnected" = "All Bluetooth devices successfully disconnected";
 
 /* No comment provided by engineer. */
@@ -470,6 +473,9 @@
 "Do you want to save the changes" = "Do you want to save the changes";
 
 /* No comment provided by engineer. */
+"don't rotate" = "don't rotate";
+
+/* No comment provided by engineer. */
 "Done" = "Done";
 
 /* No comment provided by engineer. */
@@ -834,6 +840,9 @@
 
 /* No comment provided by engineer. */
 "Left" = "Left";
+
+/* No comment provided by engineer. */
+"left-right only" = "left-right only";
 
 /* No comment provided by engineer. */
 "Length" = "Length";
@@ -1464,6 +1473,9 @@
 
 /* No comment provided by engineer. */
 "Set Phiro light" = "Set Phiro light";
+
+/* No comment provided by engineer. */
+"Set rotation style" = "Set rotation style";
 
 /* No comment provided by engineer. */
 "Set size to" = "Set size to";
